Atualização do projeto

--- a/TelaHome/index3.html
+++ b/TelaHome/index3.html
@@ -20,7 +20,9 @@
   <body>
     <header>
       <nav class="navbar">
-        <div class="logo"><a href="#">Emprestech</a></div>
+        <div class="logo">
+          <a href="../TelaLogin/index1.html">Emprestech</a>
+        </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
           <li><a href="#">Contato</a></li>
