--- a/TelaLogin/index1.html
+++ b/TelaLogin/index1.html
@@ -40,7 +40,8 @@
           <button type="submit" class="login">Login</button>
 
           <div class="register-link">
-            Não tem uma conta? <a href="#">Cadastre-se</a>
+            Não tem uma conta?
+            <a href="../TelaCadastro/index2.html">Cadastre-se</a>
           </div>
         </form>
       </main>
