--- a/TelaCadastro/index2.html
+++ b/TelaCadastro/index2.html
@@ -18,7 +18,7 @@
                         <h1>Cadastre-se</h1>
                     </div>
                     <div class="login-button">
-                        <button><a href=#>Entrar</a> </button>
+                        <button><a href="../TelaLogin/index1.html">Já tem uma conta? Faça login</a> </button>
                     </div>
                 </div>
                 
