--- a/TelaCadastro/index2.html
+++ b/TelaCadastro/index2.html
@@ -83,7 +83,7 @@
                 </div>
                 
                 <div class="continue-botton">
-                    <button><a href=#>Continuar</a></button>
+                    <button><a href="../TelaHome/index3.html">Continuar</a></button>
                 </div>
             </form>    
          </div>
