--- a/cadastro.html
+++ b/cadastro.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../TelaCadastro/style2.css">
+    <link rel="stylesheet" href="style/cadastro.css">
 </head>
 <body>
     <div class="container">
          <div class="form-image">
-            <img src="../assets/img/cadastro.svg" >
+            <img src="cadastro.html" >
          </div>
          <div class="form">
             <form action=#>
@@ -18,7 +18,7 @@
                         <h1>Cadastre-se</h1>
                     </div>
                     <div class="login-button">
-                        <button><a href="../TelaLogin/index1.html">Já tem uma conta? Faça login</a> </button>
+                        <button><a href="login.html">Já tem uma conta? Faça login</a> </button>
                     </div>
                 </div>
                 
@@ -83,7 +83,7 @@
                 </div>
                 
                 <div class="continue-botton">
-                    <button><a href="../TelaHome/index3.html">Continuar</a></button>
+                    <button><a href="index.html">Continuar</a></button>
                 </div>
             </form>    
          </div>
