--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trocatech|Melhor sistema de trocha</title>
-    <link rel="stylesheet" href="../TelaHome/style3.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -21,7 +21,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <a href="../TelaLogin/index1.html">Emprestech</a>
+          <a href="login.html">Emprestech</a>
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
@@ -43,7 +43,7 @@
       <img
         class="background-box"
         alt="Ilustração de uma pessoa tendo uma ideia"
-        src="../assets/img/principal.svg"
+        src="img/principal.svg"
       />
       <section class="form-section">
         <form action="">
