--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style/login.css" />
     <title>Faça seu login</title>
   </head>
   <body>
@@ -41,7 +41,7 @@
 
           <div class="register-link">
             Não tem uma conta?
-            <a href="../TelaCadastro/index2.html">Cadastre-se</a>
+            <a href="cadastro.html">Cadastre-se</a>
           </div>
         </form>
       </main>
