--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
          <div class="form-image">
-            <img src="cadastro.html" >
+            <img src="img/cadastro.svg" >
          </div>
          <div class="form">
             <form action=#>
